Prevent input icon from jumping around when input has an error message to display

--- a/src/components/shared/Input/Input.css
+++ b/src/components/shared/Input/Input.css
@@ -68,3 +68,7 @@
   display: flex;
   align-items: center;
 }
+
+.iap-login-form__input.iap-login-form__input--invalid + .iap-input-btn {
+  top: 16px;
+}
